cluster/apps/networking/whoami/whoami-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whoami
  namespace: networking
  labels:
    app.kubernetes.io/name: whoami
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: whoami
  template:
    metadata:
      labels:
        app.kubernetes.io/name: whoami
    spec:
      containers:
      - name: whoami
        image: stefanscherer/whoami:2.0.2
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
          protocol: TCP
        securityContext:
          runAsNonRoot: true
          allowPrivilegeEscalation: false
          # Run the container as nobody:nogroup
          runAsUser: 65534
          runAsGroup: 65534
        resources:
          requests:
            cpu: 50m
            memory: 16Mi
          limits:
            memory: 32Mi
