cluster/apps/networking/whoami/whoami-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: whoami
  namespace: networking
spec:
  ports:
    - protocol: TCP
      name: web
      port: 80
      targetPort: 8080
  selector:
    app: whoami
